--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 <body>
     <header>
         <nav>
-            <a href="">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
 <ul>
     <li><a href="">Studio</a></li>
     <li><a href="">Portfolio</a></li>
     <li><a href="">Contacts</a></li>
 </ul>
         </nav>
+        <address>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
+        </address>
     </header>
     <main>
         <section><h1>Effective Solutions
@@ -51,22 +53,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/our-team1.jpg" alt="Mark Guerrero" width="264">
+                    <img src="./images/our-team1.jpg" alt="Mark Guerrero" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/our-team2.jpg" alt="Tom Ford" width="264">
+                    <img src="./images/our-team2.jpg" alt="Tom Ford" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/our-team3.jpg" alt="Camila Garcia" width="264">
+                    <img src="./images/our-team3.jpg" alt="Camila Garcia" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/our-team4.jpg" alt="Daniel Wilson" width="264">
+                    <img src="./images/our-team4.jpg" alt="Daniel Wilson" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -74,7 +76,7 @@
         </section>
     </main>
     <footer>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
